--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,3 +7,16 @@ body {
 .container {
   margin-top: 100px;
 }
+
+.questions .form-control {
+  display: inline;
+}
+
+.questions li {
+  margin-bottom: 10px;
+}
+
+.questions .btn-question {
+  margin-right: 10px;
+  color: #fff;
+}
